<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_layout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:layout_alignLeft="@+id/btnAchievement"
        android:layout_alignStart="@+id/btnAchievement"
        android:layout_centerVertical="true"
        android:background="@drawable/custom_btn"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:textAllCaps="true"
        android:shadowDy="1"
        android:shadowRadius="8"
        android:text="@string/btnStart"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAchievement"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnStart"

        android:textAllCaps="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="24dp"
        android:background="@drawable/custom_btn"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="8"
        android:text="@string/btn_achievement"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnAchievement"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="24dp"
        android:background="@drawable/custom_btn"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:textAllCaps="true"
        android:shadowRadius="8"
        android:text="@string/share"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnShare"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@drawable/custom_btn"
        android:textAllCaps="true"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="8"
        android:text="@string/about_us"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"

        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/logoDescription" />

    </LinearLayout>

</RelativeLayout>